cambie todo lo de user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=taller
-spring.datasource.username=brand
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=dbShubert
+spring.datasource.username=admin
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
